[gd_scene load_steps=3 format=3 uid="uid://cc78f177k6oab"]

[ext_resource type="Script" path="res://obstaculoIndestructible/obstaculo_indestructible.gd" id="1_fs5w8"]
[ext_resource type="Texture2D" uid="uid://pxs8tw0esnx7" path="res://Textures/arbol_sprite_v01.png" id="1_plkq7"]

[node name="ObstaculoIndestructible" type="Area2D"]
z_index = 50
position = Vector2(3, 1)
scale = Vector2(0.475, 0.475)
script = ExtResource("1_fs5w8")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 50
position = Vector2(161.758, -360.484)
texture = ExtResource("1_plkq7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(164.211, -353.684)
polygon = PackedVector2Array(-42, -248, -17, -117, 8, 42, 19, 213, -3, 364, -133, 361, -151, 294, -139, 124, -102, -47)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(93.7579, -300.484)
scale = Vector2(9.45, 30.6)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
